# Modius

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: main.rs
src/audio/: mod.rs  playback.rs  player.rs  playlist.rs  repeat_mode.rs  time_control.rs  volume_control.rs
src/ui/: interface.rs  main.slint  test.slint
src/ui/rust/: interface.rs
src/ui/slint/: main.slint  slider.slint  volume_control.slint
