[package]
name = "Modius"
version = "0.1.1"
edition = "2024"
authors = ["Rychards Matos <rychardsmatos@protonmail.com>"]
license = "MIT"
readme = "README.md"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
rfd = "0.15"
rodio = "0.20"
slint = "1.11"

[build-dependencies]
slint-build = "1.11"
